# docker-nginx-rtmp

./: .gitignore  LICENSE  README.md
.github/workflows/: build_and_publish.yml
demo/: Dockerfile.server  README.md  docker-compose.yml  nginx.conf
nginx-rtmp-auth/: Cargo.toml  Dockerfile  README.md
nginx-rtmp-auth/src/: main.rs
nginx-rtmp-server/: Dockerfile  README.md
nginx-rtmp-server/rootfs/etc/: passwd
